--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,23 +1,14 @@
-@import "body.less";
+@import "fonts.less";
+@import "bloks/page.less";
 @import "vars.less";
-@import "page-header.less";
-@import "page-header__logo.less";
-@import "main-nav.less";
-@import "main-slogan.less";
-@import "main-intro.less";
-@import "welcome-block.less";
-@import "advantages__item.less";
-@import "advantages__title.less";
-@import "advantages__description.less";
-@import "blue-theme.less";
-@import "standart-theme.less";
-@import "standart-theme__padding.less";
-@import "blue-theme__padding.less";
-@import "sedona-tag.less";
-@import "socials.less";
-@import "copyright.less";
-@import "bg-page-intro.less";
-@import "photo__list";
-@import "photo__description.less";
-@import "photo__title.less";
+@import "bloks/page-header.less";
+@import "bloks/main-nav.less";
+@import "bloks/main-slogan.less";
+@import "bloks/main-intro.less";
+@import "bloks/welcome-block.less";
+@import "bloks/blue-theme.less";
+@import "bloks/standart-theme.less";
+@import "bloks/sedona-tag.less";
+@import "bloks/copyright.less";
+@import "bloks/bg-page-intro.less";
 @import "visually-hidden.less";
