Второе задание на препроцессоры

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,14 +1,19 @@
 @import "fonts.less";
-@import "bloks/page.less";
 @import "vars.less";
-@import "bloks/page-header.less";
-@import "bloks/main-nav.less";
-@import "bloks/main-slogan.less";
-@import "bloks/main-intro.less";
-@import "bloks/welcome-block.less";
-@import "bloks/blue-theme.less";
-@import "bloks/standart-theme.less";
-@import "bloks/sedona-tag.less";
-@import "bloks/copyright.less";
-@import "bloks/bg-page-intro.less";
+@import "blocks/page.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
+@import "blocks/main-slogan.less";
+@import "blocks/main-intro.less";
+@import "blocks/welcome-block.less";
+@import "blocks/blue-theme.less";
+@import "blocks/standart-theme.less";
+@import "blocks/sedona-tag.less";
+@import "blocks/copyright.less";
+@import "blocks/bg-page-intro.less";
+@import "blocks/button.less";
+@import "blocks/video-controls.less";
+@import "blocks/feedback.less";
+@import "blocks/emotions-message.less";
+@import "blocks/form-input.less";
 @import "visually-hidden.less";
