Адаптивная сетка 1 задание

--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -2,3 +2,21 @@
   font-size: 18px;
   line-height: 26px;
 }
+
+.feedback__header {
+  @media (min-width: @tablet-width) {
+    padding: 65px 0;
+    max-width: 435px;
+    margin: auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 114px;
+    padding-bottom: 50px;
+  }
+}
+
+.feedback__intro {
+  font-size: 14px;
+  line-height: 24px;
+}
