--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,19 +1,27 @@
 @import "fonts.less";
 @import "vars.less";
 @import "blocks/page.less";
-@import "blocks/page-header.less";
 @import "blocks/main-nav.less";
+@import "blocks/page-header.less";
+@import "blocks/site-list.less";
 @import "blocks/main-slogan.less";
 @import "blocks/main-intro.less";
 @import "blocks/welcome-block.less";
+@import "blocks/page-intro.less";
+@import "blocks/advantages.less";
+@import "blocks/deep-advantages.less";
 @import "blocks/blue-theme.less";
 @import "blocks/standart-theme.less";
 @import "blocks/sedona-tag.less";
 @import "blocks/copyright.less";
 @import "blocks/bg-page-intro.less";
 @import "blocks/button.less";
+@import "blocks/photo-video.less";
+@import "blocks/photo.less";
 @import "blocks/video-controls.less";
 @import "blocks/feedback.less";
 @import "blocks/emotions-message.less";
 @import "blocks/form-input.less";
+@import "blocks/social.less";
+@import "blocks/page-footer.less";
 @import "visually-hidden.less";
