--- a/source/less/vars.less
+++ b/source/less/vars.less
@@ -66,8 +66,12 @@
 @replay-hover:@brown;
 @replay-down:fade(@brown, 30%);
 
-
 /*----------Шрифты-----*/
 @main-font:"PT Sans", sans-serif;
 @main-font-size: 14px;
 @main-line-height: 21px;
+
+/*--------viewport----*/
+@tablet-width: 768px;
+@desktop-width: 1200px;
+@mobile-width-only: 767px;
