--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,11 +1,19 @@
 .page-header {
+  display: flex;
+  flex-direction: column;
   font-family: @main-font;
   font-size: 18px;
   line-height: 40px;
-  font-weight: bold;
+  font-weight: 700;
   text-transform: uppercase;
+  background-color: @base-white;
+  color: @base-black;
+  margin: 0;
+  padding: 0;
 }
 
-.site-list {
-  list-style: none;
+.page-header__logo {
+  display: flex;
+  justify-content: center;
+  height: 84px;
 }
