--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,12 +12,15 @@
 @import "blocks/deep-advantages.less";
 @import "blocks/blue-theme.less";
 @import "blocks/standart-theme.less";
+@import "blocks/search.less";
+@import "blocks/map.less";
 @import "blocks/sedona-tag.less";
 @import "blocks/copyright.less";
 @import "blocks/bg-page-intro.less";
 @import "blocks/button.less";
 @import "blocks/photo-video.less";
 @import "blocks/photo.less";
+@import "blocks/video.less";
 @import "blocks/video-controls.less";
 @import "blocks/feedback.less";
 @import "blocks/emotions-message.less";
