--- a/source/less/blocks/blue-theme.less
+++ b/source/less/blocks/blue-theme.less
@@ -3,4 +3,12 @@
   background-color: @base-blue;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0 13px;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    justify-content: center;
+    padding: 0 32px;
+  }
 }
