--- a/source/less/vars.less
+++ b/source/less/vars.less
@@ -20,9 +20,9 @@
 /*--Цвета для замены картинок--*/
 
 /*------Тени----*/
-@mobile-menu-dark-shadow: 0px 1px 0px fade(@base-black, 20%);
-@mobile-menu-white-shadow: inset 0px 1px 0px fade(@base-white, 20%);
-@dark-gradient:linear-gradient(180deg, fade(@base-black, 0%) 0%, fade(@base-black, 20%) 100%);
+@mobile-menu-dark-shadow: 1px solid fade(@base-black, 20%);
+@mobile-menu-white-shadow: 1px solid fade(@base-white, 20%);
+@dark-gradient: linear-gradient(180deg, fade(@base-black, 0%) 0%, fade(@base-black, 20%) 100%);
 
 /*-----Состояния------------*/
 @main-menu-active:@chocolate;
