--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,5 +1,35 @@
 .copyright {
   text-decoration: none;
-  color: @base-black;
   line-height: 26px;
+  padding-top: 45px;
+  padding-bottom: 26px;
+  font-weight: 400;
+
+  a {
+    color: @base-black;
+    text-decoration: none;
+    position: relative;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+  }
+}
+
+.copyright__link--academy {
+  position: absolute;
+  top: -5px;
+  width: 27px;
+  height: 34px;
+
+  path {
+    &:focus,
+    &:hover {
+      fill: @base-blue;
+    }
+
+    &:active {
+      fill: fade(@base-black, 30%);
+    }
+  }
 }
