--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,8 +1,19 @@
 .main-nav {
   padding: 0;
   margin: 0;
+  position: relative;
+  min-height: 56px;
   color: @base-white;
-  background-color: @base-blue;
+  background-color: @base-white;
+
+  @media (min-width: @tablet-width) {
+    background-color: @base-white;
+  }
+}
+
+.main-nav__wrapper {
+  margin: 0;
+  padding: 0;
 }
 
 .main-nav__list {
@@ -11,17 +22,112 @@
   list-style: none;
 }
 
-.main-nav__list a {
-  color: #ffffff;
-  text-decoration: none;
+.main-nav__toggle {
+  position: absolute;
+  top: 17px;
+  right: 20px;
+  z-index: 2;
+  display: block;
+  width: 23px;
+  height: 20px;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 23px;
+  height: 4px;
+  background-color: @base-blue;
+  box-shadow: 0 8px 0 0 @base-blue, 0 16px 0 0 @base-blue;
+}
+
+.main-nav--closed .main-nav__toggle:hover::before {
+  background-color: @mobile-menu-burger-hover;
+  box-shadow:
+    0 8px 0 0 @mobile-menu-burger-hover,
+    0 16px 0 0 @mobile-menu-burger-hover;
+}
+
+@media (max-width: @mobile-width-only) {
+  .main-nav--closed .site-list__item {
+    display: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .main-nav--opened .main-nav__wrapper {
+    width: 100%;
+  }
+
+  .main-nav--opened .main-nav__wrapper::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 7px;
+    background: @dark-gradient;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    min-height: 0;
+  }
+
+  .main-nav--nojs .site-list__item {
+    display: block;
+  }
+}
+
+.main-nav--opened .main-nav__toggle {
+  top: 16px;
+  right: 19px;
+  width: 24px;
+  height: 24px;
+  background-color: transparent;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 9px;
+    right: -3px;
+    width: 28px;
+    height: 4px;
+    background-color: @mobile-menu-close;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+  &:hover::before,
+  &:hover::after,
+  &:focus::before,
+  &:focus::after {
+    background-color: @mobile-menu-close-hover;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .main-nav__wrapper {
     display: flex;
-    justify-content: space-between;
-    width: 640px;
-    margin: 0 auto;
+    margin: 0 64px;
   }
 
   .main-nav__toggle {
@@ -31,6 +137,6 @@
 
 @media (min-width: @desktop-width) {
   .main-nav__wrapper {
-    width: 960px;
+    width: 100%;
   }
 }
