--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,14 +1,16 @@
 .page-footer {
-  padding: 36px 0;
+  padding-top: 38px;
 }
 
 .page-footer__wrapper {
-  flex-wrap: wrap;
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+
 
   @media (min-width: @tablet-width) {
     padding: 0 64px;
+    padding-bottom: 36px;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
   }
@@ -24,5 +26,4 @@
   align-items: center;
   justify-content: center;
   margin: 0;
-  padding: 0;
 }
