--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -7,6 +7,8 @@
   text-transform: uppercase;
   text-align: center;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .page__body {
@@ -14,4 +16,6 @@
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   align-content: start;
+  margin: 0;
+  padding: 0;
 }
