--- a/source/less/blocks/photo-video.less
+++ b/source/less/blocks/photo-video.less
@@ -18,3 +18,31 @@
     padding-bottom: 67px;
   }
 }
+
+.photo-video__title {
+  font-size: 18px;
+  line-height: 26px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 26px;
+  }
+}
+
+.photo-video__intro {
+  line-height: 24px;
+  color: @brown;
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    margin-top: 30px;
+    padding: 0 10px;
+
+
+    br {
+      display: none;
+    }
+  }
+}
