--- a/source/less/blocks/welcome-block.less
+++ b/source/less/blocks/welcome-block.less
@@ -6,6 +6,22 @@
 }
 
 .welcome__wrapper {
-  margin: auto;
   padding: 90px 0;
+  position: relative;
+  width: 320px;
+  margin: auto;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 11px;
+    left: 0;
+    width: 100%;
+    background: url("../../img/bg-intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    height: 30px;
+    background-size: cover;
+    background-position: center 0;
+    box-sizing: border-box;
+  }
 }
