--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,9 +1,13 @@
 @font-face {
   font-family: "PT Sans";
+  font-weight: normal;
+  font-style: normal;
   src: local("PT Sans"), local("PTSans"), url("../fonts/ptsans.woff2") format("woff2"), url("../fonts/ptsans.woff") format("woff");
 }
 
 @font-face {
   font-family: "PT Sans";
+  font-weight: bold;
+  font-style: normal;
   src: local("PTSans-Bold"), local("PT Sans Bold"), url("../fonts/ptsansbold.woff2") format("woff2"), url("../fonts/ptsansbold.woff") format("woff");
 }
