--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,39 +1,54 @@
-.page-intro__wrapper {
-  margin: auto;
-  padding-top: 52px;
-  padding-bottom: 67px;
+.page-intro {
+  background: url("../../img/bg-back-mobile@1x.jpg") center no-repeat;
+  height: 158px;
+  margin: 0;
+  padding: 0;
+
+  @media (min-width: @tablet-width) {
+    background-size: cover;
+    height: 290px;
+  }
+
+  @media (min-width: @tablet-width) {
+    height: 301px;
+  }
 }
 
-.bg-page-intro {
-  background: url("../../img/bg-back-mobile@1x.jpg") center no-repeat;
-  width: 100%;
-  background-position: center -230px;
+.page-intro__wrapper {
+  padding-top: 52px;
   position: relative;
+  margin: auto;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 95px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-top: 101px;
+  }
 
   &::after {
     content: "";
     position: absolute;
-    background-image: url("../../img/bg-intro-triangle-mobile.svg");
-    background-repeat: no-repeat;
-    height: 40px;
-    width: 100%;
-    bottom: -10px;
+    bottom: -61px;
     left: 0;
+    width: 100%;
+    background: url("../../img/bg-intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    height: 30px;
+    background-size: cover;
+    background-position: center 0;
+    box-sizing: border-box;
 
     @media (min-width: @tablet-width) {
       display: none;
     }
   }
+}
 
+.page-intro__text {
   @media (min-width: @tablet-width) {
-    height: 290px;
-    background-position: center -235px;
-    background-size: cover;
-  }
-
-  @media (min-width: @desktop-width) {
-    height: 301px;
-    background-position: center -330px;
-    background-size: cover;
+    height: 78px;
+    width: 457px;
   }
 }
