--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -8,7 +8,8 @@
 
 
   @media (min-width: @tablet-width) {
-    padding: 0 64px;
+    max-width: 663px;
+    margin: auto;
     padding-bottom: 36px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -26,4 +27,14 @@
   align-items: center;
   justify-content: center;
   margin: 0;
+
+  @media (min-width: @tablet-width) {
+    &:nth-child(1) {
+      justify-content: flex-start;
+    }
+
+    &:last-child {
+      justify-content: flex-end;
+    }
+  }
 }
