--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -19,3 +19,11 @@
   margin: 0;
   padding: 0;
 }
+
+.page-container {
+  @media (min-width: @desktop-width) {
+    box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+    margin: auto;
+    width: 1200px;
+  }
+}
