--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -8,4 +8,14 @@
   border: none;
   text-decoration: none;
   min-height: 58px;
+  width: 100%;
+
+  @media (min-width: @tablet-width) {
+    max-width: 324px;
+    padding: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-width: 480px;
+  }
 }
