--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -4,6 +4,7 @@
   padding-top: 45px;
   padding-bottom: 26px;
   font-weight: 400;
+  padding-right: 27px;
 
   a {
     color: @base-black;
@@ -13,6 +14,7 @@
 
   @media (min-width: @tablet-width) {
     padding: 0;
+    padding-right: 27px;
   }
 }
 
