--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,10 +20,14 @@
 @import "blocks/photo-video.less";
 @import "blocks/photo.less";
 @import "blocks/video.less";
-@import "blocks/video-controls.less";
 @import "blocks/feedback.less";
-@import "blocks/emotions-message.less";
+@import "blocks/form-presenting.less";
+@import "blocks/form-contacts.less";
+@import "blocks/form-impression.less";
+@import "blocks/form-visited.less";
+@import "blocks/form-emotions.less";
 @import "blocks/form-input.less";
 @import "blocks/social.less";
 @import "blocks/page-footer.less";
 @import "visually-hidden.less";
+@import "display-none.less";
