--- a/source/less/vars.less
+++ b/source/less/vars.less
@@ -62,9 +62,9 @@
 @back-checkbox-button-hover:@light-grey;
 @back-checkbox-button-down:@base-middlegrey;
 
-@replay:@dark-grey;
-@replay-hover:@brown;
-@replay-down:fade(@brown, 30%);
+@mobile-controls-color:@dark-grey;
+@mobile-controls-hover:@brown;
+@mobile-controls-down:fade(@brown, 30%);
 
 /*----------Шрифты-----*/
 @main-font:"PT Sans", sans-serif;
