--- a/source/less/blocks/form-input.less
+++ b/source/less/blocks/form-input.less
@@ -1,4 +1,6 @@
 .form-input {
+  margin: 0;
+  padding: 0;
   background-color: @base-grey;
   border: none;
   font-size: 18px;
@@ -7,6 +9,6 @@
   padding-left: 22px;
   padding-bottom: 14px;
   margin-bottom: 20px;
-  margin-left: 13px;
   box-sizing: border-box;
+  width: 100%;
 }
