--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -144,10 +144,36 @@
   background-color: transparent;
   border: none;
 
+  &:hover,
+  &:focus {
+    path {
+      fill: @mobile-controls-hover;
+    }
+  }
+
+  &:active {
+    path {
+      fill: @mobile-controls-down;
+    }
+  }
+
   @media (min-width: @tablet-width) {
     position: absolute;
     right: 20px;
     bottom: 26px;
+
+    &:hover,
+    &:focus {
+      path {
+        fill: fade(@base-white, 60%);
+      }
+    }
+
+    &:active {
+      path {
+        fill: fade(@base-white, 30%);
+      }
+    }
   }
 
   @media (min-width: @desktop-width) {
