--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -7,4 +7,40 @@
     padding: 58px 64px;
     margin: auto;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 66px;
+  }
+}
+
+.search__title {
+  margin: 0;
+  margin-bottom: 25px;
+  font-size: 21px;
+  line-height: 26px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+.search__description {
+  margin: 0;
+  color: @brown;
+  line-height: 24px;
+  margin-bottom: 27px;
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    margin: auto;
+    margin-bottom: 37px;
+    padding: 0 18px;
+    width: 435px;
+    box-sizing: border-box;
+
+    br {
+      display: none;
+    }
+  }
 }
