--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,19 +1,32 @@
 .video__wrapper {
   padding-top: 32px;
   padding-bottom: 40px;
+  position: relative;
+
+  &::before {
+    content: "";
+    left: 0;
+    top: 0;
+    position: absolute;
+    background-color: @light-grey;
+    height: 1px;
+    width: 320px;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
 
   @media (min-width: @tablet-width) {
-    padding: 0 64px;
-    max-height: 685px;
     margin: auto;
     padding-top: 59px;
   }
 
   @media (min-width: @desktop-width) {
     margin: auto;
-    max-height: 683px;
     padding-top: 63px;
-    padding-bottom: 84px;
+    margin-bottom: 84px;
+    padding-bottom: 0;
   }
 }
 
@@ -23,5 +36,292 @@
 
   @media (min-width: @tablet-width) {
     margin: auto;
+    max-width: 445px;
+  }
+}
+
+.video__title {
+  font-size: 18px;
+  line-height: 26px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
+}
+
+.video__description {
+  margin: 0;
+  margin-bottom: 35px;
+  margin-top: 35px;
+  line-height: 24px;
+  color: @brown;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 67px;
+
+    br {
+      display: none;
+    }
+  }
+}
+
+.video {
+  margin: 0;
+  padding: 0;
+
+  video {
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.video__container {
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+
+  @media (min-width: @tablet-width) {
+    width: 648px;
+    height: 500px;
+    padding: 0;
+    margin: auto;
+    position: relative;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 800px;
+    height: 683px;
+  }
+}
+
+.video-tools {
+  position: relative;
+}
+
+.video-tools__wrapper {
+  position: absolute;
+  background-color: fade(@base-black, 60%);
+  width: 280px;
+  height: 45px;
+  top: -45px;
+  left: 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 648px;
+    height: 93px;
+    left: 60px;
+    top: -92px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 200px;
+    bottom: 0;
+    width: 800px;
+  }
+}
+
+.video__time-controls {
+  display: flex;
+}
+
+.video__scale {
+  width: 235px;
+  height: 3px;
+  background-color: fade(@base-white, 20%);
+  margin-top: 22px;
+  margin-left: 22px;
+
+  @media (min-width: @tablet-width) {
+    width: 389px;
+    margin-top: 45px;
+    margin-left: 93px;
+    z-index: 10;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 540px;
+  }
+}
+
+.video__toggle {
+  position: absolute;
+  top: 20px;
+  left: 55px;
+  width: 7px;
+  height: 7px;
+  background-color: @base-white;
+  border-radius: 50%;
+
+  &:focus,
+  &:hover {
+    background-color: @base-middlegrey;
+  }
+
+  &:active {
+    background-color: @base-grey;
+  }
+
+  @media (min-width: @tablet-width) {
+    left: 203px;
+    top: 43px;
+    z-index: 10;
+  }
+}
+
+.video-controls {
+  width: 280px;
+  height: 66px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: @base-grey;
+
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    bottom: 0;
+    left: 60px;
+    width: 648px;
+    height: 93px;
+    background-color: transparent;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 200px;
+    bottom: 0;
+    width: 800px;
+  }
+}
+
+.video-controls__item {
+  &:first-child {
+    margin-left: 25px;
+    margin-right: auto;
+
+    @media (min-width: @tablet-width) {
+      margin-left: 35px;
+    }
+  }
+
+  &:last-child {
+    margin-left: 31px;
+    margin-right: 23px;
+
+    @media (min-width: @tablet-width) {
+      margin-right: 41px;
+    }
+  }
+}
+
+.video-repeat {
+  border: none;
+  fill: @mobile-controls-color;
+  width: 16px;
+  height: 20px;
+  background-color: transparent;
+
+  &:hover,
+  &:focus {
+    fill: @mobile-controls-hover;
+  }
+
+  &:active {
+    fill: @mobile-controls-down;
+  }
+
+  @media (min-width: @tablet-width) {
+    fill: @base-white;
+
+    &:hover,
+    &:focus {
+      fill: fade(@base-white, 60%);
+    }
+
+    &:active {
+      fill: fade(@base-white, 30%);
+    }
+  }
+}
+
+.video-subtitle {
+  border: none;
+  fill: @mobile-controls-color;
+  width: 32px;
+  height: 20px;
+  background-color: transparent;
+
+  &:hover,
+  &:focus {
+    path {
+      fill: @mobile-controls-hover;
+    }
+  }
+
+  &:active {
+    path {
+      fill: @mobile-controls-down;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    path {
+      fill: @base-white;
+    }
+
+    &:hover,
+    &:focus {
+      path {
+        fill: fade(@base-white, 60%);
+      }
+    }
+
+    &:active {
+      path {
+        fill: fade(@base-white, 30%);
+      }
+    }
+  }
+}
+
+.video-full {
+  border: none;
+  fill: @mobile-controls-color;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+
+  &:hover,
+  &:focus {
+    polygon {
+      fill: @mobile-controls-hover;
+    }
+  }
+
+  &:active {
+    polygon {
+      fill: @mobile-controls-down;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    polygon {
+      fill: @base-white;
+    }
+
+    &:hover,
+    &:focus {
+      polygon {
+        fill: fade(@base-white, 60%);
+      }
+    }
+
+    &:active {
+      polygon {
+        fill: fade(@base-white, 30%);
+      }
+    }
   }
 }
