--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -9,6 +9,7 @@
   text-decoration: none;
   min-height: 58px;
   width: 100%;
+  font-family: @main-font;
 
   @media (min-width: @tablet-width) {
     max-width: 324px;
