--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -26,7 +26,8 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding: 65px 0;
+    padding-top: 59px;
+    padding-bottom: 58px;
     margin: auto;
   }
 
@@ -50,10 +51,11 @@
   font-size: 14px;
   line-height: 24px;
   color: @brown;
+  margin-top: 29px;
 
   @media (min-width: @tablet-width) {
-    padding: 0 160px;
-    margin-top: 40px;
+    padding: 0 165px;
+    margin-top: 33px;
 
     br {
       display: none;
@@ -67,7 +69,7 @@
 
 .feedback-form {
   padding: 0 20px;
-  margin-bottom: 48px;
+  margin-bottom: 38px;
   margin-top: 20px;
 
   @media (min-width: @tablet-width) {
@@ -78,6 +80,7 @@
   @media (min-width: @desktop-width) {
     padding: 0 120px;
     margin-bottom: 66px;
+    margin-top: 6px;
   }
 }
 
