--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -3,10 +3,10 @@
   position: relative;
   margin: 0;
   padding: 0;
-  margin-top: 20px;
+  margin-top: 28px;
 
   @media (min-width: @tablet-width) {
-    margin-top: 24px;
+    margin-top: 37px;
     width: 100%;
   }
 
@@ -20,7 +20,7 @@
     background-color: @middle-grey;
     height: 1px;
     width: 320px;
-    top: -20px;
+    top: -24px;
     left: -20px;
 
     @media (min-width: @tablet-width) {
@@ -33,14 +33,41 @@
   font-weight: 700;
   padding: 0;
   margin: 0;
-  margin-bottom: 17px;
+  margin-bottom: 14px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 20px;
+    margin-bottom: 18px;
+    font-size: 21px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      background-color: @middle-grey;
+      height: 1px;
+      width: 123px;
+      top: 9px;
+      left: 0;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      background-color: @middle-grey;
+      height: 1px;
+      width: 123px;
+      top: 9px;
+      right: 0;
+    }
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 71px;
+    margin-bottom: 60px;
+
+    &::before,
+    &::after {
+      width: 280px;
+      top: 7px;
+    }
   }
 }
 
@@ -48,11 +75,6 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-left: 20px;
-
-  @media (min-width: @tablet-width) {
-    margin-left: 0;
-  }
 
   @media (min-width: @desktop-width) {
     display: flex;
@@ -62,15 +84,19 @@
 .contact__label {
   font-size: 14px;
   color: @brown;
+  display: flex;
+  margin-left: 22px;
+  margin-bottom: 8px;
+
 
   @media (min-width: @tablet-width) {
-    display: flex;
     margin-left: 22px;
+    margin-bottom: 0;
   }
 
   @media (min-width: @desktop-width) {
     margin-left: 0;
-    align-items: center;
+    margin-top: 26px;
     margin-right: 16px;
   }
 }
@@ -82,6 +108,13 @@
   }
 
   .form-input {
+    margin-bottom: 13px;
+
+    @media (min-width: @tablet-width) {
+      margin-top: 8px;
+      margin-bottom: 23px;
+    }
+
     @media (min-width: @desktop-width) {
       margin-bottom: 0;
       width: 66%;
@@ -101,15 +134,15 @@
     background-position: center;
     height: 58px;
     width: 58px;
-    top: 30px;
+    top: 35px;
     right: 0;
 
     @media (min-width: @tablet-width) {
-      top: 26px;
+      top: 34px;
     }
 
     @media (min-width: @desktop-width) {
-      top: 0;
+      top: 8px;
       right: 80px;
     }
   }
@@ -127,15 +160,15 @@
     background-position: center;
     height: 58px;
     width: 58px;
-    top: 30px;
+    top: 33px;
     right: 0;
 
     @media (min-width: @tablet-width) {
-      top: 26px;
+      top: 34px;
     }
 
     @media (min-width: @desktop-width) {
-      top: 0;
+      top: 8px;
     }
   }
 }
