--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -24,7 +24,7 @@
 
   @media (min-width: @desktop-width) {
     margin: auto;
-    padding-top: 63px;
+    padding-top: 61px;
     margin-bottom: 84px;
     padding-bottom: 0;
   }
@@ -53,12 +53,13 @@
 .video__description {
   margin: 0;
   margin-bottom: 35px;
-  margin-top: 35px;
+  margin-top: 27px;
   line-height: 24px;
   color: @brown;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 67px;
+    margin-bottom: 78px;
+    margin-top: 33px;
 
     br {
       display: none;
@@ -93,7 +94,6 @@
 
   @media (min-width: @desktop-width) {
     width: 800px;
-    height: 683px;
   }
 }
 
@@ -113,7 +113,7 @@
     width: 648px;
     height: 93px;
     left: 60px;
-    top: -92px;
+    top: -93px;
   }
 
   @media (min-width: @desktop-width) {
@@ -148,10 +148,10 @@
 
 .video__toggle {
   position: absolute;
-  top: 20px;
-  left: 55px;
-  width: 7px;
-  height: 7px;
+  top: 19px;
+  left: 58px;
+  width: 9px;
+  height: 9px;
   background-color: @base-white;
   border-radius: 50%;
 
@@ -165,8 +165,8 @@
   }
 
   @media (min-width: @tablet-width) {
-    left: 203px;
-    top: 43px;
+    left: 206px;
+    top: 42px;
     z-index: 10;
   }
 }
@@ -198,20 +198,34 @@
 
 .video-controls__item {
   &:first-child {
-    margin-left: 25px;
+    margin-left: 19px;
+    margin-bottom: 5px;
     margin-right: auto;
 
     @media (min-width: @tablet-width) {
-      margin-left: 35px;
+      margin-left: 29px;
     }
+
+    @media (min-width: @desktop-width) {
+      margin-left: 28px;
+    }
+  }
+
+  &:nth-child(2) {
+    margin-bottom: 3px;
   }
 
   &:last-child {
     margin-left: 31px;
-    margin-right: 23px;
+    margin-right: 29px;
 
     @media (min-width: @tablet-width) {
-      margin-right: 41px;
+      margin-right: 47px;
+      margin-bottom: 3px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-right: 49px;
     }
   }
 }
