--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -4,7 +4,8 @@
   padding-top: 45px;
   padding-bottom: 26px;
   font-weight: 400;
-  padding-right: 27px;
+  padding-right: 37px;
+  position: relative;
 
   a {
     color: @base-black;
@@ -14,15 +15,16 @@
 
   @media (min-width: @tablet-width) {
     padding: 0;
-    padding-right: 27px;
+    padding-right: 47px;
   }
 }
 
 .copyright__link--academy {
   position: absolute;
-  top: -5px;
-  width: 27px;
-  height: 34px;
+  top: -9px;
+  width: 40px;
+  height: 40px;
+  right: -45px;
 
   path {
     &:focus,
