--- a/source/less/blocks/deep-advantages.less
+++ b/source/less/blocks/deep-advantages.less
@@ -6,16 +6,17 @@
 .deep-advantages__wrapper {
   padding: 0 26px;
   padding-top: 26px;
+  padding-bottom: 14px;
 
   @media (min-width: @tablet-width) {
     padding: 0 30px;
-    padding-top: 158px;
-    padding-bottom: 59px;
+    padding-top: 154px;
+    padding-bottom: 39px;
   }
 
   @media (min-width: @desktop-width) {
     margin: auto;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
     padding-left: 58px;
     padding-right: 58px;
   }
@@ -24,11 +25,63 @@
 .deep-advantages__item {
   text-align: left;
   position: relative;
-  padding-left: 60px;
+  padding-left: 44px;
+  margin-top: 10px;
+  margin-bottom: 22px;
 
   @media (min-width: @tablet-width) {
     text-align: center;
     padding-left: 0;
+    margin-top: 0;
+
+    &:first-child {
+      .deep-advantages__title {
+        text-align: left;
+        padding-left: 65px;
+      }
+
+      .deep-advantages__description {
+        padding-left: 8px;
+        padding-right: 45px;
+      }
+    }
+
+    &:nth-child(2) {
+      .deep-advantages__title {
+        text-align: right;
+        padding-right: 47px;
+      }
+
+      .deep-advantages__description {
+        padding-right: 0;
+        padding-left: 43px;
+      }
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &:first-child {
+      .deep-advantages__title {
+        padding-left: 106px;
+      }
+
+      .deep-advantages__description {
+        padding-left: 10px;
+        padding-right: 92px;
+      }
+    }
+
+    &:nth-child(2) {
+      .deep-advantages__title {
+        text-align: right;
+        padding-right: 90px;
+      }
+
+      .deep-advantages__description {
+        padding-right: 0;
+        padding-left: 93px;
+      }
+    }
   }
 }
 
@@ -39,18 +92,18 @@
   fill: @base-blue;
   width: 39px;
   height: 37px;
-  top: -10px;
-  left: 0;
+  top: -11px;
+  left: -4px;
 
   @media (min-width: @tablet-width) {
     width: 75px;
     height: 72px;
-    top: -100px;
-    left: 80px;
+    top: -98px;
+    left: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    left: 140px;
+    left: 102px;
   }
 }
 
@@ -62,17 +115,17 @@
   width: 32px;
   height: 38px;
   top: -10px;
-  left: 5px;
+  left: -1px;
 
   @media (min-width: @tablet-width) {
-    width: 76px;
-    height: 68px;
+    width: 64px;
+    height: 75px;
     top: -100px;
-    left: 80px;
+    left: 105px;
   }
 
   @media (min-width: @desktop-width) {
-    left: 140px;
+    left: 185px;
   }
 }
 
@@ -83,18 +136,18 @@
   fill: @base-blue;
   width: 40px;
   height: 34px;
-  top: -5px;
-  left: 0;
+  top: -3px;
+  left: -8px;
 
   @media (min-width: @tablet-width) {
-    width: 64px;
-    height: 75px;
-    top: -100px;
-    left: 85px;
+    width: 76px;
+    height: 68px;
+    top: -95px;
+    left: 80px;
   }
 
   @media (min-width: @desktop-width) {
-    left: 150px;
+    left: 142px;
   }
 }
 
@@ -119,17 +172,27 @@
   font-size: 18px;
   line-height: 26px;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+    margin-bottom: 22px;
+  }
 }
 
 .deep-advantages__description {
   margin: 0;
-  margin-bottom: 26px;
+
 
   @media (min-width: @tablet-width) {
+    padding: 0 40px;
+
     br {
       display: none;
     }
-    padding: 0 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 30px;
   }
 }
