--- a/source/less/blocks/form-input.less
+++ b/source/less/blocks/form-input.less
@@ -12,3 +12,20 @@
   box-sizing: border-box;
   width: 100%;
 }
+
+.form-input:hover,
+.form-input :focus {
+  background-color: @light-grey;
+}
+
+.form-input:active {
+  background-color: @base-white;
+  border: 4px solid  @light-grey;
+  outline: none;
+}
+
+.form-input::placeholder {
+  font-family: @main-font;
+  color: @base-black;
+  font-weight: 700;
+}
