--- a/source/less/blocks/form-presenting.less
+++ b/source/less/blocks/form-presenting.less
@@ -2,13 +2,28 @@
   border: none;
   margin: 0;
   padding: 0;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     width: 41%;
+
+    &::before {
+      content: "";
+      position: absolute;
+      background-color: @middle-grey;
+      height: 292px;
+      width: 1px;
+      top: 2px;
+      left: -58px;
+    }
   }
 
   @media (min-width: @desktop-width) {
     width: 40%;
+
+    &::before {
+      left: -79px;
+    }
   }
 }
 
@@ -29,8 +44,13 @@
   margin-bottom: 19px;
 
   @media (min-width: @tablet-width) {
+    font-size: 21px;
     margin-bottom: 55px;
     text-align: left;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 0;
   }
 }
 
