--- a/source/less/blocks/form-visited.less
+++ b/source/less/blocks/form-visited.less
@@ -3,14 +3,32 @@
   position: relative;
   margin: 0;
   padding: 0;
-  margin-top: 20px;
-  margin-bottom: 39px;
+  margin-top: 15px;
+  margin-bottom: 5px;
 
   @media (min-width: @tablet-width) {
     width: 100%;
-    margin-top: 31px;
+    margin-top: 30px;
+    margin-bottom: 36px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      background-color: @middle-grey;
+      height: 1px;
+      width: 123px;
+      top: 26px;
+      right: 0;
+    }
   }
 
+  @media (min-width: @desktop-width) {
+    margin-bottom: 40px;
+
+    &::after {
+      width: 280px;
+    }
+  }
 
   &::before {
     content: "";
@@ -18,11 +36,17 @@
     background-color: @middle-grey;
     height: 1px;
     width: 320px;
-    top: -15px;
+    top: -18px;
     left: -20px;
 
     @media (min-width: @tablet-width) {
-      display: none;
+      width: 123px;
+      top: 26px;
+      left: 0;
+    }
+
+    @media (min-width: @desktop-width) {
+      width: 280px;
     }
   }
 }
@@ -32,7 +56,8 @@
   margin-bottom: 36px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 58px;
+    margin-bottom: 59px;
+    font-size: 21px;
   }
 }
 
@@ -42,30 +67,43 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-left: 40px;
+  padding-left: 80px;
   list-style: none;
 
   @media (min-width: @tablet-width) {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 60%;
-    margin: 0 auto;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 150px 150px;
+    grid-row-gap: 62px;
+    grid-column-gap: 110px;
+    padding-left: 175px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 97%;
+    display: flex;
+    flex-direction: row;
+    padding-left: 82px;
   }
 }
 
 .visited-list__item {
   margin-bottom: 54px;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    &:not(:first-child) {
+      margin-left: 39px;
+    }
+  }
 }
 
 .visited__label {
   text-transform: none;
   font-weight: 700;
-  padding-left: 40px;
   position: relative;
 }
 
@@ -73,11 +111,15 @@
   content: "";
   position: absolute;
   background-color: @base-grey;
-  height: 48px;
-  width: 48px;
-  top: -10px;
-  left: -25px;
+  height: 55px;
+  width: 55px;
+  top: -18px;
+  left: -80px;
   border-radius: 10%;
+
+  @media (min-width: @tablet-width) {
+    top: -16px;
+  }
 }
 
 .visited-input__checkbox:focus + .visited__label::before,
@@ -95,10 +137,14 @@
   background-image: url("../../img/icon-tick.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-  height: 48px;
-  width: 48px;
-  top: 5px;
-  left: -10px;
+  height: 50px;
+  width: 50px;
+  top: 2px;
+  left: -63px;
+
+  @media (min-width: @tablet-width) {
+    top: 5px;
+  }
 }
 
 .visited-input__checkbox:checked:active + .visited__label::after {
