--- a/source/less/blocks/main-slogan.less
+++ b/source/less/blocks/main-slogan.less
@@ -2,4 +2,8 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+  }
 }
