--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -5,7 +5,7 @@
     height: 350px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     width: 1200px;
   }
 }
