--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -23,7 +23,7 @@
     padding-top: 95px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     padding-top: 101px;
   }
 
