--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -58,7 +58,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     padding: 0 20px;
-    padding-top: 22px;
+    padding-top: 15px;
   }
 
   @media (min-width: @desktop-width) {
@@ -120,7 +120,7 @@
   line-height: 24px;
   font-size: inherit;
   margin: 0;
-  margin-top: 6px;
+  margin-top: 4px;
 
   @media (min-width: @tablet-width) {
     margin: 0;
@@ -133,7 +133,11 @@
   line-height: 24px;
   text-transform: none;
   margin: 0;
-  margin-bottom: 13px;
+  margin-bottom: 11px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 17px;
+  }
 
   @media (min-width: @desktop-width) {
     color: @base-white;
@@ -159,8 +163,6 @@
 
   @media (min-width: @tablet-width) {
     position: absolute;
-    right: 20px;
-    bottom: 26px;
 
     &:hover,
     &:focus {
@@ -183,12 +185,30 @@
   }
 }
 
+.first-photo__like {
+  @media (min-width: @tablet-width) {
+    right: 14px;
+    bottom: 24px;
+  }
+}
+
+.others-photo__like {
+  @media (min-width: @tablet-width) {
+    left: 234px;
+    bottom: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 310px;
+  }
+}
+
 .likes-number {
   line-height: 24px;
   font-size: 14px;
   font-weight: 700;
   font-family: @main-font;
-  padding-left: 9px;
+  padding-left: 10px;
 
   @media (min-width: @desktop-width) {
     color: @base-white;
