--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -1,11 +1,24 @@
 .search__wrapper {
-  padding-top: 33px;
-  padding-bottom: 42px;
+  padding-top: 35px;
   margin: auto;
+  margin-bottom: 49px;
+
+  .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+    margin: auto;
+
+    @media (min-width: @tablet-width) {
+      min-width: 458px;
+    }
+  }
 
   @media (min-width: @tablet-width) {
     padding: 58px 64px;
     margin: auto;
+    padding-top: 57px;
   }
 
   @media (min-width: @desktop-width) {
@@ -15,13 +28,13 @@
 
 .search__title {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   font-size: 21px;
   line-height: 26px;
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 33px;
   }
 }
 
@@ -34,13 +47,17 @@
 
   @media (min-width: @tablet-width) {
     margin: auto;
-    margin-bottom: 37px;
-    padding: 0 18px;
+    margin-bottom: 39px;
+    padding: 0 10px;
     width: 435px;
     box-sizing: border-box;
 
     br {
       display: none;
     }
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 43px;
   }
 }
