--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -16,10 +16,19 @@
   @media (min-width: @tablet-width) {
     color: @base-black;
     background-color: @base-white;
-    width: 20%;
+    width: 19%;
+
+    &:first-child {
+      margin-left: 4px;
+    }
 
     &:nth-child(2) {
-      margin-right: 146px;
+      margin-right: 165px;
+      margin-left: 8px;
+    }
+
+    &:last-child {
+      margin-left: 4px;
     }
 
     &--active {
@@ -40,8 +49,17 @@
   }
 
   @media (min-width: @desktop-width) {
+    &:first-child {
+      margin-left: 5px;
+    }
+
     &:nth-child(2) {
-      margin-right: 206px;
+      margin-right: 256px;
+      margin-left: 11px;
+    }
+
+    &:last-child {
+      margin-left: 10px;
     }
   }
 }
