--- a/source/less/blocks/welcome-block.less
+++ b/source/less/blocks/welcome-block.less
@@ -13,7 +13,6 @@
 .welcome__wrapper {
   padding: 90px 0;
   position: relative;
-
   margin: auto;
 
   &::after {
@@ -28,6 +27,14 @@
     background-size: cover;
     background-position: center 0;
     box-sizing: border-box;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-top: 77px;
   }
 }
 
